--- a/TC01.md
+++ b/TC01.md
@@ -1,7 +1,7 @@
-Test Case Name :
-Preconditions :
-Inputs :
-Actions :
-Expected Results :
-Postconditions :
-bla bla bla
+**Test Case Name :**
+* Preconditions :
+* Inputs :
+* Actions :
+* Expected Results :
+* Postconditions :
+* bla bla bla
