--- a/Juniper/JN0-211.md
+++ b/Juniper/JN0-211.md
@@ -6,3 +6,9 @@
 ### Secure VPN Technology
 + IPsec VPN
 + **Feedback : Access to private cloud environments is through private leased connections, or over the Internet through secure VPN access. IPsec VPN encrypts and hashes traffic as it traverses the putlic Internet.**
+
+### Layer 2 Loop Prevention Protocols
++ MC-LAG
++ LACP
++ **Feedback : MC-LAG and LACP provide link and device redundancy without the need for Spanning Tree Protocol (STP)**
+
